css/cribbit-gang.css
/* ... */
.calltoactionbtn {
  margin-bottom: 40px;
  padding: 10px 30px;
  background-color: #fff;
  color: #000;
  text-transform: uppercase;
}

.mintbtnwrapper {
  position: absolute;
  left: auto;
  top: 3%;
  right: 3%;
  bottom: auto;
}

.mintbutton {
  padding: 15px 40px;
  background-color: #fff;
  color: #000;
  text-transform: uppercase;
}

.bold-text {
  text-shadow: 3px 3px 0 #000;
}

.contentfooter {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #141414;
}

.text-block-landingp6 {
  width: 40ch;
  margin-bottom: 10px;
  color: #00ff41;
  font-size: 1rem;
  line-height: 1.5;
}

.text-block-landingp7 {
  width: 40ch;
  margin-bottom: 40px;
  color: #00ff41;
  font-size: 1rem;
  line-height: 1.5;
}

.text-block-landingp8 {
  width: 40ch;
  margin-bottom: 10px;
  color: #00ff41;
  font-size: 1rem;
  line-height: 1.5;
}

.text-block-landingp9 {
  width: 40ch;
  margin-bottom: 3rem;
  color: #00ff41;
  font-size: 1rem;
  line-height: 1.5;
}

.play_btn {
  position: absolute;
  left: 3%;
  top: 3%;
  right: auto;
  bottom: auto;
  z-index: 1;
  width: 2.55rem;
  height: 2.55rem;
  background-color: rgba(56, 152, 236, 0);
  cursor: pointer;
}

.officon {
  display: none;
}

.c {
  position: fixed;
}

@media screen and (max-width: 991px) {
  .pre-looader {
    display: none;
  }

  .lowleftwrapper {
    padding-bottom: 10px;
    padding-left: 10px;
  }

  .image {
    max-width: 90%;
  }

  .text-block-landingp1 {
    width: auto;
    font-size: 0.5rem;
  }

  .text-block-landingp2 {
    width: auto;
    font-size: 0.5rem;
  }

  .text-block-landingp3 {
    width: auto;
    font-size: 0.5rem;
  }

  .text-block-landingp4 {
    width: auto;
    font-size: 0.5rem;
  }

  .text-block-landingp5 {
    width: auto;
    font-size: 0.5rem;
  }

  .contentteam {
    height: auto;
  }

  .socialshero {
    width: auto;
  }

  .headingcollection {
    text-align: left;
  }

  .containerteam {
    height: auto;
    max-height: 140vh;
  }

  .headingteam {
    margin-top: 60px;
    margin-bottom: 20px;
  }

  .grid {
    width: auto;
    -ms-grid-columns: 1fr 1fr 1fr;
    grid-template-columns: 1fr 1fr 1fr;
    -ms-grid-rows: auto auto auto;
    grid-template-rows: auto auto auto;
  }

  .headingteam2 {
    margin-top: 40px;
  }

  .calltoactionbtn {
    margin-bottom: 60px;
  }

  .text-block-landingp6 {
    width: auto;
    font-size: 0.5rem;
  }

  .text-block-landingp7 {
    width: auto;
    font-size: 0.5rem;
  }

  .text-block-landingp8 {
    width: auto;
    font-size: 0.5rem;
  }

  .text-block-landingp9 {
    width: auto;
    font-size: 0.5rem;
  }
}

@media screen and (max-width: 767px) {
  .image {
    max-width: 80%;
  }

  .entrance-popup {
    width: 95vw;
  }

  .contentteam {
    height: auto;
  }

  .heading {
    width: 30ch;
  }

  .socialshero {
    width: auto;
  }

  .containercontent {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .contentright {
    width: 90%;
    max-width: 100%;
    padding-left: 0px;
  }

  .contentleft {
    width: 60%;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }

  .headingcollection {
    text-align: center;
  }

  .containerteam {
    height: auto;
    max-height: 150vh;
  }

  .headingteam {
    margin-top: 50px;
    margin-bottom: 20px;
  }

  .grid {
    width: auto;
    -ms-grid-columns: 1fr 1fr;
    grid-template-columns: 1fr 1fr;
    -ms-grid-rows: auto auto auto auto;
    grid-template-rows: auto auto auto auto;
  }

  .headingteam2 {
    margin-top: 40px;
  }

  .calltoactionbtn {
    margin-bottom: 60px;
  }
}

@media screen and (max-width: 479px) {
  .pre-looader {
    display: none;
  }

  .lowleftwrapper {
    padding-bottom: 5px;
    padding-left: 5px;
  }

  .image {
    max-width: 60%;
  }

  .text-block-landingp2 {
    margin-bottom: 10px;
  }

  .entrance-popup {
    display: none;
    width: 90vw;
  }

  .contentcollection {
    height: auto;
  }

  .contentteam {
    height: auto;
  }

  .heading {
    width: auto;
  }

  .container {
    max-width: 90%;
  }

  .socialshero {
    width: auto;
  }

  .containercontent {
    height: 100%;
    max-height: 160vh;
    max-width: 85%;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .contentright {
    width: auto;
    max-width: 100%;
    margin-bottom: 60px;
    padding-left: 0px;
  }

  .contentleft {
    width: 80%;
    margin-top: 60px;
  }

  .paragraph {
    font-size: 14px;
  }

  .heading-2 {
    text-align: left;
  }

  .containerteam {
    height: 100%;
    max-height: 200vh;
    max-width: 90%;
    padding-top: 40px;
  }

  .headingteam {
    margin-top: 60px;
    margin-bottom: 20px;
  }

  .grid {
    width: 100%;
    -ms-grid-columns: 1fr 1fr;
    grid-template-columns: 1fr 1fr;
    -ms-grid-rows: auto auto auto auto;
    grid-template-rows: auto auto auto auto;
  }

  .squareteam {
    width: auto;
    height: 210px;
  }

  .teamtext {
    font-size: 10px;
  }

  .headingteam2 {
    margin-top: 30px;
    font-size: 24px;
  }

  .calltoactionbtn {
    margin-bottom: 30px;
  }

  .mintbutton {
    padding: 10px 25px;
    text-align: center;
  }

  .teamimg {
    width: 140px;
    height: 140px;
  }

  .text-block-landingp9 {
    margin-bottom: 60px;
  }

  .play_btn {
    top: 5%;
  }
}
/* ... */

